--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -28,9 +28,9 @@ jobs:
           pip install pytest pytest-cov
       - name: Test with pytest
         run: |
-          pytest --cov=custom --cov-report xml tests/ 
+          pytest --cov=custom --cov-report html tests/ 
       - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: coverage.xml
+          path-to-lcov: coverage.html
