--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -33,4 +33,4 @@ jobs:
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: coverage.html
+          path-to-lcov: htmlcov/index.html
